force-app/main/default/objects/Tournament__c/Tournament__c.object-meta.xml
<CustomObject>
    <description>Represents a specific tournament, such as the FIFA 2022 World Cup or any other tournament analyzed by Athletic Analysis.</description>
    <label>Tournament</label>
    <nameField>
        <label>Tournament Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tournaments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>