force-app/main/default/objects/Tournament__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start date and time of the tournament.</description>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>