force-app/main/default/objects/Tournament__c/listViews/Tournaments.listView-meta.xml
<ListView>
    <fullName>Tournaments</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approved__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Tournaments</label>
</ListView>